feat: toggle google play billing with env

--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,6 @@ OPENAI_API_KEY=''
 SCARF_NO_ANALYTICS=true
 DO_NOT_TRACK=true
 ANONYMIZED_TELEMETRY=false
+
+# Enable Google Play billing integration (yes/no)
+GOOGLE_PLAY_BILLING=no
